<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hasil_permainan"
        android:id="@+id/txtJudul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pemain_menang"
        android:id="@+id/txtYangMenang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtJudul"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:fontFamily="serif-monospace"
        android:textAlignment="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_lagi"
        android:id="@+id/btnMainlagi"
        app:layout_constraintTop_toBottomOf="@id/txtYangMenang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textAllCaps="false" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/kembalikemenu"
        android:id="@+id/btnKembali"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintTop_toBottomOf="@id/btnMainlagi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>