<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:includeFontPadding="false"
            android:lineSpacingExtra="-30sp"
            android:rotation="-10"
            android:text="@string/titleX"
            android:textColor="@color/teal_700"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:includeFontPadding="false"
            android:rotation="-10"
            android:text="@string/titleY"
            android:textColor="@color/teal_200"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvx" />

        <TextView
            android:id="@+id/tvz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="center"
            android:includeFontPadding="false"
            android:rotation="-10"
            android:text="@string/titleZ"
            android:textColor="@color/purple_200"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgBatu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_batu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cons1" />

    <ImageView
        android:id="@+id/imgKertas"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_kertas"
        app:layout_constraintEnd_toStartOf="@id/imgGunting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBatu"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageView
        android:id="@+id/imgGunting"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_gunting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgKertas"
        app:layout_constraintTop_toBottomOf="@id/imgBatu"
        app:layout_constraintVertical_chainStyle="packed" />


</androidx.constraintlayout.widget.ConstraintLayout>